--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,17 +6,21 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "stubapi": "json-server --watch mock.json"
+    "stubapi": "json-server --watch mock.json",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "eslint": "^8.4.1",
+    "gh-pages": "^3.2.3",
     "nodemon": "^2.0.15",
     "prettier": "^2.5.1"
   },
   "dependencies": {
     "express": "^4.17.2",
     "json-server": "^0.17.0"
-  }
+  },
+  "homepage": "https://github.com/doosanehi/inspace.git/"
 }
